--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
 "scripts": {
-  "build": "vite build",
-  "postbuild": "powershell Copy-Item _redirects dist/"
-},
-  "dependencies": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  }
+    "dependencies": {
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
